--- a/style.css
+++ b/style.css
@@ -4,4 +4,31 @@ body{
 .top-banner{
     
    background-image: url(img/bg-img.jpg);
+   background-repeat: no-repeat;
+   text-align: center;
+   margin-bottom: 10px;
+   background-size: 100%;
+}
+.white-color{
+    color: white;
+}
+
+.top-banner p{
+    font-size: 20px;
+}
+.donate-button{
+    text-decoration: none;
+    background-color: rgb(235, 138, 138);
+    padding: 5px 30px;
+    border-radius: 5px;
+}
+.decide-amount p{
+     display: flex;
+     text-align: center;
+}
+footer{
+    color: black;
+    background-color: cadetblue;
+    width: 100%;
+    height: 100px;
 }
