--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ body{
    background-image: url(img/bg-img.jpg);
    background-repeat: no-repeat;
    text-align: center;
-   margin-bottom: 10px;
+   margin-bottom: 15px;
    background-size: 100%;
+   
+
 }
 .white-color{
     color: white;
@@ -25,16 +27,51 @@ body{
 .decide-amount p{
      display: flex;
      text-align: center;
+     margin-bottom: 15px;
 }
+
+.tk-buton{
+    margin: 10px 10px;
+    border: 5px solid rebeccapurple;
+    padding: 5px 5px;
+    color: brown;
+}
+.donate-plan{
+    display: flex;
+    margin-bottom: 15px;
+    text-align: center;
+}
+.donate-plan-img{
+    width: 5px;
+    height: 5px;
+
+}
+.decide-amount{
+    text-align: center;
+    display: flex;
+}
+.donate-plan-box{
+    border: 0 solid white;
+    margin: 40px 40px;
+    padding: 10px 10px;
+
+}
+    
+    
 footer{
-    color: black;
+    color: rgb(80, 12, 12);
     background-color: cadetblue;
     width: 100%;
     height: 100px;
+    text-align: center;
+    font-size: 25px;
 }
-.tk-buton{
-    margin: 30px 30px;
-    border: 5px solid rebeccapurple;
-    padding: 15px 15px;
-    color: brown;
+#bg-color-1{
+    background-color: rgb(240, 218, 192);
+}
+#bg-color-2{
+    background-color: aquamarine;
+}
+#bg-color-3{
+    background-color: khaki;
 }
