--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body{
     font-family: 'Gulzar', serif;
 }
+section{
+    margin-bottom: 150px;
+}
+
 /* top of the website*/
 .top-banner{
     
@@ -66,12 +70,16 @@ body{
 
 .flexible-container{
     display: flex;
+    margin-left: 5%;
+    margin-right: 5%;
+    
 }
 .donate-plan-box{
     text-align: center;
     border: 2px solid white;
     margin: 20px 20px;
     padding: 10px 10px;
+    box-shadow: 10px 10px 10px gray;
 
 }
     
